# LazyCommander

./: .gitignore  AGENTS.md  DEVLOG.md  PLAN.md  README.md  SPECS.md  pyproject.toml  run.py
src/: app.py
src/models/: command.py
src/storage/: json_store.py
src/ui/: layout.py  modals.py  theme.py  widgets.py
tests/: test_storage.py
