[project]
name = "lazycommander"
version = "0.1.0"
description = "A TUI command launcher for quick command execution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.90.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
